alteração no cabeçario

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <nav>
         <a href="#">home</a>
         <a href="#">noticias</a>
-        <a href="#">curiosidade</a>
-        <a href="#">fale conosco</a>
+        <a href="#">contato</a>
+        
     </nav>
     
 </body>
